tools/pw_stubs.h

typedef int64_t off_t;
struct b;
 typedef struct b B;
struct p;
 typedef struct p P;
struct window;
 typedef struct window W;
struct screen;
 typedef struct screen Screen;
struct bw;
 typedef struct bw BW;
 typedef struct menu MENU;
 typedef struct qw QW;
struct lattr_db;
struct high_syntax;
struct charmap;
struct macro;
 typedef struct macro MACRO;
struct scrn {
	char _pad0[8];
	ptrdiff_t li;
	ptrdiff_t co;
	char _pad1[760];
	int *updtab;
	char _pad2[48];
};
typedef struct scrn SCRN;
struct watom {
	const char *context;
	void (*disp)(W *w, int flg);
	void (*follow)(W *w);
	int (*abort)(W *w);
	int (*rtn)(W *w);
	int (*type)(W *w, int k);
	void (*resize)(W *w, ptrdiff_t width, ptrdiff_t height);
	void (*move)(W *w, ptrdiff_t x, ptrdiff_t y);
	void (*ins)(W *w, B *b, off_t l, off_t n, int flg);
	void (*del)(W *w, B *b, off_t l, off_t n, int flg);
	int what;
};
typedef struct watom WATOM;
struct screen {
	SCRN *t;
	ptrdiff_t wind;
	W *topwin;
	W *curwin;
	ptrdiff_t w, h;
};
struct window {
	LINK(W) link;
	Screen *t;
	ptrdiff_t x, y, w, h;
	ptrdiff_t ny, nh;
	ptrdiff_t reqh;
	ptrdiff_t fixed;
	ptrdiff_t hh;
	W *win;
	W *main;
	W *orgwin;
	ptrdiff_t curx, cury;
	KBD *kbd;
	const WATOM *watom;
	void *object;
	const char *msgt;
	const char *msgb;
	const char *huh;
	int *notify;
	struct bstack *bstack;
};
struct options {
	struct options *next;
	const char *ftype;
	void *match;
	int overtype;
	off_t lmargin;
	off_t rmargin;
	int autoindent;
	int wordwrap;
	int nobackup;
	char _pad_tab[4];
	off_t tab;
	int indentc;
	char _pad_istep[4];
	off_t istep;
	const char *context;
	const char *lmsg;
	const char *rmsg;
	const char *smsg;
	const char *zmsg;
	int linums;
	int hiline;
	int readonly;
	int french;
	int flowed;
	int spaces;
	int crlf;
	int highlight;
	int visiblews;
	int syntax_debug;
	const char *syntax_name;
	struct high_syntax *syntax;
	const char *map_name;
	struct charmap *charmap;
	const char *language;
	int smarthome;
	int indentfirst;
	int smartbacks;
	int purify;
	int picture;
	int highlighter_context;
	int single_quoted;
	int no_double_quoted;
	int c_comment;
	int cpp_comment;
	int hash_comment;
	int vhdl_comment;
	int semi_comment;
	int tex_comment;
	int hex;
	int viewmode;
	int ansi;
	int title;
	const char *text_delimiters;
	const char *cpara;
	const char *cnotpara;
	MACRO *mnew;
	MACRO *mold;
	MACRO *msnew;
	MACRO *msold;
	MACRO *mfirst;
};
typedef struct options OPTIONS;
struct p {
	LINK(P) link;
	B *b;
	char _pad0[24];
	off_t byte;
	off_t line;
	off_t col;
	off_t xcol;
	int valcol;
	int end;
	char _pad1[24];
};
typedef int pid_t;
struct b {
	char _pad0[16];
	P *bof;                 /* 16 */
	P *eof;                 /* 24 */
	char *name;             /* 32 */
	char _pad1[40];         /* 40 */
	int count;              /* 80 */
	int changed;            /* 84 */
	char _pad2[104];        /* 88 */
	OPTIONS o;              /* 192 */
	P *oldcur;              /* 536 */
	P *oldtop;              /* 544 */
	P *err;                 /* 552 */
	char *current_dir;      /* 560 */
	char _pad3[4];          /* 568 → 572 */
	int rdonly;             /* 572 */
	int internal;           /* 576 */
	int scratch;            /* 580 */
	int er;                 /* 584 */
	pid_t pid;              /* 588 */
	int out;                /* 592 */
	char _pad5[4];          /* 596 → 600 */
	void *vt;               /* 600 */
	char _pad6[24];         /* 608 → 632 */
};
struct bw {
	W *parent;
	B *b;
	P *top;
	P *cursor;
	off_t offset;
	Screen *t;
	ptrdiff_t h, w, x, y;
	OPTIONS o;
	void *object;
	int lincols;
	off_t curlin;
	int top_changed;
	struct lattr_db *db;
	int shell_flag;
	int pasting;
	int last_viewmode;
	struct { int ww, ai, sp; } saved;
};
struct high_syntax {
	void *next;
	const char *name;
	char _pad[120];
};
struct charmap {
	void *next;                 /* 0 */
	const char *name;           /* 8 */
	int type;                   /* 16 */
	char _pad_type[4];          /* 20 → 24 */
	int (*is_punct)(struct charmap *map, int c);   /* 24 */
	int (*is_print)(struct charmap *map, int c);   /* 32 */
	int (*is_space)(struct charmap *map, int c);   /* 40 */
	int (*is_alpha_)(struct charmap *map, int c);  /* 48 */
	int (*is_alnum_)(struct charmap *map, int c);  /* 56 */
	char _pad[2692];            /* keep rough size; only is_alnum_ needed */
};
void *joe_malloc(ptrdiff_t size);
void joe_free(void *ptr);
ptrdiff_t slen(const char *s);
char *vsncpy(char *s, ptrdiff_t len, const char *blk, ptrdiff_t blklen);
void vsrm(char *s);
void wfit(Screen *t);
void updall(void);
P *pdup(P *p, const char *where);
void prm(P *p);
struct high_syntax *load_syntax(const char *name);
const char *my_gettext(const char *s);
QW *mkqw(W *w, const char *prompt, ptrdiff_t len,
	int (*func)(W *w, int k, void *object, int *notify),
	int (*abrt)(W *w, void *object),
	void *object, int *notify);
extern int skiptop;
extern Screen *maint;
extern struct charmap *locale_map;
extern int square;
extern WATOM watomtw;
char *zdup(const char *s);
void varm(char **vary);
int rmatch(const char *pattern, const char *s);
int cmplt_file(BW *bw, int k);
MENU *mkmenu(W *loc, W *targ, char **s,
	int (*func)(MENU *m, ptrdiff_t cursor, void *object, int k),
	int (*abrt)(W *w, ptrdiff_t cursor, void *object),
	int (*backs)(MENU *m, ptrdiff_t cursor, void *object),
	ptrdiff_t cursor, void *object, int *notify);
extern int menu_above;
extern int menu_jump;