tools/syntax_stubs.h

typedef struct color_scheme SCHEME;
typedef struct Hash HASH;
typedef struct point P;
typedef struct buffer B;
typedef struct bw BW;
typedef struct options OPTIONS;
struct Hash {
	ptrdiff_t len;
	HENTRY **tab;
	ptrdiff_t nentries;
};
struct options_match { char _pad[32]; };
struct macro { char _pad[48]; };
typedef struct macro MACRO;
struct point {
	void *link_next;
	void *link_prev;
	B *b;
	char _pad[112 - 24];
};
struct buffer {
	char _pad0[192];
	OPTIONS o;
	char _pad1[632 - 192 - 344];
};
HASH *htmk(ptrdiff_t len);
void *htadd(HASH *ht, const char *name, void *val);
void *htfind(HASH *ht, const char *name);