tools/cmd_stubs.h

typedef struct window W;
typedef struct bw BW;
typedef struct b B;
typedef struct p P;
typedef struct macro MACRO;
typedef struct watom WATOM;
typedef struct options OPTIONS;
typedef struct screen Screen;
P *pfcol(P *p);
void msgnw(W *w, const char *s);
BW *wmkpw(W *w, const char *prompt, B **history,
	int (*func)(W *w, char *s, void *object, int *notify),
	const char *huh, int (*abrt)(W *w, void *object),
	int (*tab)(BW *bw, int k),
	void *object, int *notify, struct charmap *map, int file_prompt);
int simple_cmplt(BW *bw, char **list);
extern int opt_mid;
extern struct charmap *utf8_map;
void **vaensure(void **vary, ptrdiff_t len);
void vasort(void **ary, ptrdiff_t len);
MACRO *mparse(MACRO *m, const char *buf, ptrdiff_t *sta, int secure);