src/options.zig


pub const off_t = i64;
pub extern fn _vaset(vary: [*c][*c]u8, pos: ptrdiff_t, el: [*c]u8) [*c][*c]u8;
pub const OPTIONS = struct_options;
pub const struct_regcomp = extern struct {
    _pad: c_int = 0,
};
pub const struct_options_match = extern struct {
    next: [*c]struct_options_match = null,
    name_regex: [*c]const u8 = null,
    contents_regex: [*c]const u8 = null,
    r_contents_regex: [*c]struct_regcomp = null,
};
pub const struct_high_syntax = extern struct {
    _pad: c_int = 0,
};
pub const struct_charmap = extern struct {
    next: [*c]struct_charmap = null,
    name: [*c]const u8 = null,
    @"type": c_int = 0,
    is_punct: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    is_print: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    is_space: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    is_alpha_: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    is_alnum_: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    to_lower: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    to_upper: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
};
pub const struct_macro = extern struct {
    _pad: [48]u8 = std.mem.zeroes([48]u8),
};
pub const MACRO = struct_macro;
pub const struct_options = extern struct {
    next: [*c]OPTIONS = null,
    ftype: [*c]const u8 = null,
    match: [*c]struct_options_match = null,
    overtype: c_int = 0,
    lmargin: off_t = 0,
    rmargin: off_t = 0,
    autoindent: c_int = 0,
    wordwrap: c_int = 0,
    nobackup: c_int = 0,
    tab: off_t = 0,
    indentc: c_int = 0,
    istep: off_t = 0,
    context: [*c]const u8 = null,
    lmsg: [*c]const u8 = null,
    rmsg: [*c]const u8 = null,
    smsg: [*c]const u8 = null,
    zmsg: [*c]const u8 = null,
    linums: c_int = 0,
    hiline: c_int = 0,
    readonly: c_int = 0,
    french: c_int = 0,
    flowed: c_int = 0,
    spaces: c_int = 0,
    crlf: c_int = 0,
    highlight: c_int = 0,
    visiblews: c_int = 0,
    syntax_debug: c_int = 0,
    syntax_name: [*c]const u8 = null,
    syntax: [*c]struct_high_syntax = null,
    map_name: [*c]const u8 = null,
    charmap: [*c]struct_charmap = null,
    language: [*c]const u8 = null,
    smarthome: c_int = 0,
    indentfirst: c_int = 0,
    smartbacks: c_int = 0,
    purify: c_int = 0,
    picture: c_int = 0,
    highlighter_context: c_int = 0,
    single_quoted: c_int = 0,
    no_double_quoted: c_int = 0,
    c_comment: c_int = 0,
    cpp_comment: c_int = 0,
    hash_comment: c_int = 0,
    vhdl_comment: c_int = 0,
    semi_comment: c_int = 0,
    tex_comment: c_int = 0,
    hex: c_int = 0,
    viewmode: c_int = 0,
    ansi: c_int = 0,
    title: c_int = 0,
    text_delimiters: [*c]const u8 = null,
    cpara: [*c]const u8 = null,
    cnotpara: [*c]const u8 = null,
    mnew: [*c]MACRO = null,
    mold: [*c]MACRO = null,
    msnew: [*c]MACRO = null,
    msold: [*c]MACRO = null,
    mfirst: [*c]MACRO = null,
};
pub const options_match = struct_options_match;
pub const struct_point = extern struct {
    _pad0: [64]u8 = std.mem.zeroes([64]u8),
    col: off_t = 0,
    xcol: off_t = 0,
    valcol: c_int = 0,
    end: c_int = 0,
    _pad1: [24]u8 = std.mem.zeroes([24]u8),
};
pub const P = struct_point;
pub const struct_buffer = extern struct {
    _pad0: [16]u8 = std.mem.zeroes([16]u8),
    bof: [*c]P = null,
    _pad1: [168]u8 = std.mem.zeroes([168]u8),
    o: OPTIONS = std.mem.zeroes(OPTIONS),
    _pad2: [36]u8 = std.mem.zeroes([36]u8),
    rdonly: c_int = 0,
    _pad3: [56]u8 = std.mem.zeroes([56]u8),
};
pub const B = struct_buffer;
pub const struct_scrn = extern struct {
    _pad: c_int = 0,
};
pub const SCRN = struct_scrn;
pub const struct_screen = extern struct {
    t: [*c]SCRN = null,
    _pad: [64]u8 = std.mem.zeroes([64]u8),
};
pub const Screen = struct_screen;
pub const struct_watom = extern struct {
    _pad: [80]u8 = std.mem.zeroes([80]u8),
    what: c_int = 0,
};
pub const WATOM = struct_watom;
pub const struct_window = extern struct {
    link_next: [*c]W = null,
    link_prev: [*c]W = null,
    t: [*c]Screen = null,
    _pad_geom: [80]u8 = std.mem.zeroes([80]u8),
    main: [*c]W = null,
    _pad1: [32]u8 = std.mem.zeroes([32]u8),
    watom: [*c]const WATOM = null,
    object: ?*anyopaque = null,
    _pad2: [40]u8 = std.mem.zeroes([40]u8),
};
pub const W = struct_window;
pub const struct_bw = extern struct {
    parent: [*c]W = null,
    b: [*c]B = null,
    top: [*c]P = null,
    cursor: [*c]P = null,
    offset: off_t = 0,
    t: [*c]Screen = null,
    h: ptrdiff_t = 0,
    w: ptrdiff_t = 0,
    x: ptrdiff_t = 0,
    y: ptrdiff_t = 0,
    o: OPTIONS = std.mem.zeroes(OPTIONS),
    object: ?*anyopaque = null,
    _pad: [56]u8 = std.mem.zeroes([56]u8),
};
pub const BW = struct_bw;
pub const charmap = struct_charmap;
pub const struct_hash = extern struct {
    _pad: [24]u8 = std.mem.zeroes([24]u8),
};
pub const HASH = struct_hash;
pub const high_syntax = struct_high_syntax;
pub const regcomp = struct_regcomp;
pub const struct_color_scheme = extern struct {
    _pad: c_int = 0,
};
pub const SCHEME = struct_color_scheme;
pub extern var locale_map: [*c]struct_charmap;
pub extern var ascii_map: [*c]struct_charmap;
pub extern var utf8_map: [*c]struct_charmap;
pub extern var locale_msgs: [*c]const u8;
pub extern var scheme_name: [*c]u8;
pub extern var xmsg: [*c]u8;
pub extern var backpath: [*c]const u8;
pub extern var backup_file_suffix: [*c]const u8;
pub const msgbuf: [*c]u8 = @extern([*c]u8, .{
    .name = "msgbuf",
});
pub extern var merr: [*c]u8;
pub extern var joe_beep: c_int;
pub extern var staen: c_int;
pub extern var keepup: c_int;
pub extern var undo_keep: c_int;
pub extern var csmode: c_int;
pub extern var floatmouse: c_int;
pub extern var rtbutton: c_int;
pub extern var nonotice: c_int;
pub extern var noexmsg: c_int;
pub extern var help_is_utf8: c_int;
pub extern var noxon: c_int;
pub extern var orphan: c_int;
pub extern var helpon: c_int;
pub extern var dopadding: c_int;
pub extern var env_lines: c_int;
pub extern var Baud: c_int;
pub extern var env_columns: c_int;
pub extern var skiptop: c_int;
pub extern var notite: c_int;
pub extern var brpaste: c_int;
pub extern var pastehack: c_int;
pub extern var nolinefeeds: c_int;
pub extern var xmouse: c_int;
pub extern var opt_usetabs: c_int;
pub extern var assume_color: c_int;
pub extern var assume_256color: c_int;
pub extern var joexterm: c_int;
pub extern var restore_file_pos: c_int;
pub extern var std_regex: c_int;
pub extern var square: c_int;
pub extern var opt_icase: c_int;
pub extern var wrap: c_int;
pub extern var menu_explorer: c_int;
pub extern var menu_above: c_int;
pub extern var menu_jump: c_int;
pub extern var menu_flg: c_int;
pub extern var pgamnt: c_int;
pub extern var dspasis: c_int;
pub extern var opt_mid: c_int;
pub extern var opt_left: c_int;
pub extern var opt_right: c_int;
pub extern var marking: c_int;
pub extern var guesscrlf: c_int;
pub extern var guessindent: c_int;
pub extern var guess_utf8: c_int;
pub extern var guess_non_utf8: c_int;
pub extern var guess_utf16: c_int;
pub extern var nobackups: c_int;
pub extern var break_links: c_int;
pub extern var break_symlinks: c_int;
pub extern var lightoff: c_int;
pub extern var force: c_int;
pub extern var autoswap: c_int;
pub extern var exask: c_int;
pub extern var nocurdir: c_int;
pub extern var nodeadjoe: c_int;
pub extern var nolocks: c_int;
pub extern var nomodcheck: c_int;
pub extern var notagsmenu: c_int;
pub extern var pico: c_int;
pub extern var transpose: c_int;
pub extern var parserr_homeonly: c_int;
pub extern var bg_text: c_int;
pub extern var bg_help: c_int;
pub extern var bg_menu: c_int;
pub extern var bg_msg: c_int;
pub extern var bg_prompt: c_int;
pub extern var bg_stalin: c_int;
pub extern var watomtw: WATOM;
pub extern var watompw: WATOM;
pub extern var filehist: [*c]B;
pub extern var maint: [*c]Screen;
pub extern fn cmplt_file(bw: [*c]BW, k: c_int) c_int;
pub extern fn math_cmplt(bw: [*c]BW, k: c_int) c_int;
pub extern fn simple_file_cmplt(bw: [*c]BW, list: [*c][*c]u8) c_int;
pub extern fn my_gettext(s: [*c]const u8) [*c]const u8;
pub extern fn joe_malloc(n: usize) ?*anyopaque;
pub extern fn joe_free(p: ?*anyopaque) void;
pub extern fn zdup(s: [*c]const u8) [*c]u8;
pub extern fn ztoi(s: [*c]const u8) c_int;
pub extern fn ztoo(s: [*c]const u8) off_t;
pub extern fn slen(s: [*c]const u8) ptrdiff_t;
pub extern fn vsncpy(v: [*c]u8, len: ptrdiff_t, s: [*c]const u8, n: ptrdiff_t) [*c]u8;
pub extern fn vsrm(v: [*c]u8) void;
pub extern fn vaensure(v: [*c][*c]u8, n: ptrdiff_t) [*c][*c]u8;
pub extern fn vasort(v: [*c][*c]u8, n: ptrdiff_t) void;
pub extern fn varm(v: [*c][*c]u8) void;
pub extern fn htmk(n: c_int) [*c]HASH;
pub extern fn htadd(h: [*c]HASH, name: [*c]const u8, val: ?*anyopaque) void;
pub extern fn htfind(h: [*c]HASH, name: [*c]const u8) ?*anyopaque;
pub extern fn find_charmap(name: [*c]const u8) [*c]struct_charmap;
pub extern fn get_encodings() ?*anyopaque;
pub extern fn load_syntax(name: [*c]const u8) [*c]struct_high_syntax;
pub extern fn load_scheme(name: [*c]const u8) [*c]SCHEME;
pub extern fn apply_scheme(s: [*c]SCHEME) c_int;
pub extern fn mparse(m: [*c]MACRO, s: [*c]u8, sta: [*c]ptrdiff_t, n: c_int) [*c]MACRO;
pub extern fn rmatch(regex: [*c]const u8, name: [*c]const u8) c_int;
pub extern fn joe_regcomp(m: [*c]struct_charmap, s: [*c]const u8, len: ptrdiff_t, fold: c_int, stdfmt: c_int, debug: c_int) [*c]struct_regcomp;
pub extern fn joe_regexec(g: [*c]struct_regcomp, p: [*c]P, nmatch: c_int, matches: ?*anyopaque, fold: c_int) c_int;
pub extern fn pdup(p: [*c]P, where: [*c]const u8) [*c]P;
pub extern fn prm(p: [*c]P) void;
pub extern fn pfcol(p: [*c]P) off_t;
pub extern fn utypebw(bw: [*c]BW, c: c_int) c_int;
pub extern fn msgnw(w: [*c]W, s: [*c]const u8) void;
pub extern fn wmkpw(w: [*c]W, prompt: [*c]u8, hist: [*c][*c]B, func: ?*const fn ([*c]W, [*c]u8, ?*anyopaque, [*c]c_int) callconv(.c) c_int, huh: [*c]u8, abrt: ?*const fn ([*c]W, ?*anyopaque) callconv(.c) c_int, cmplt: ?*const fn ([*c]BW, c_int) callconv(.c) c_int, object: ?*anyopaque, notify: [*c]c_int, map: [*c]struct_charmap, instant: c_int) ?*anyopaque;
pub extern fn simple_cmplt(bw: [*c]BW, list: [*c][*c]u8) c_int;
pub extern fn jgetbuiltins(suffix: [*c]const u8) [*c][*c]u8;
pub extern fn rexpnd(word: [*c]const u8) [*c][*c]u8;
pub extern fn joe_state() void;
pub extern fn updall() void;
pub extern fn wfit(t: [*c]Screen) void;
pub extern fn nredraw(t: [*c]SCRN) void;
pub extern fn chpwd(path: [*c]const u8) c_int;
pub extern fn pwd() [*c]u8;
pub extern fn xdg_config_dir() [*c]const u8;
pub extern fn meta_color(s: [*c]const u8) c_int;
pub extern fn calc(bw: [*c]BW, s: [*c]u8, secure: c_int) f64;
pub export var aborthint: [*c]const u8 = "^C";
pub export var helphint: [*c]const u8 = "^K H";
pub export var options_list: [*c]OPTIONS = null;
